basic restart endpoint
